--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "wip/alpha",
   "scripts": {
     "test": "node_modules/.bin/mocha ./test/**/*-test.js",
-    "watchify": "watchify src/index.js -t envify -o static/bundle.js",
+    "watchify": "watchify src/index.js -v --debug -t envify -o static/bundle.js",
     "server": "live-server --cors --watch=dev,static --open=dev/index.html --proxy=/api:${ZIPKIN_BASE_URL}/api"
   },
   "author": "Steve Conover",
